cyclonedx-bom/src/specs/v1_7/snapshots/cyclonedx_bom__specs__v1_7__modelcard__test__it_should_write_xml_model_parameters.snap
---
source: cyclonedx-bom/src/specs/v1_7/modelcard.rs
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<modelParameters>
  <approach>
    <type>supervised</type>
  </approach>
  <task>Task</task>
  <architectureFamily>Architecture</architectureFamily>
  <modelArchitecture>Model</modelArchitecture>
  <datasets>
    <dataset bom-ref="dataset-1">
      <type>dataset</type>
      <name>Training Data</name>
      <contents>
        <url>https://example.com/path/to/dataset</url>
      </contents>
      <classification>public</classification>
      <governance>
        <owners>
          <owner>
            <contact bom-ref="contact-1">
              <name>Contact</name>
              <email>contact@example.com</email>
            </contact>
          </owner>
        </owners>
      </governance>
    </dataset>
  </datasets>
  <inputs>
    <input>
      <format>string</format>
    </input>
  </inputs>
  <outputs>
    <output>
      <format>image</format>
    </output>
  </outputs>
</modelParameters>
